tests/parser/fail/01_paren_missing.zulerr
( 42
---
PARENTHESES_UNMATCHED
